2008-02-11  Werner Koch  <wk@g10code.com>

	* common.h (tlvinfo_t): New.
	* common.c (parse_tlv): New.  Based on code from libksba.
	* mapihelp.cpp (has_smime_filename): New.
	(is_really_cms_encrypted): New.
	(mapi_change_message_class): Use this here to work around a
	CryptoEx bug.

2008-02-08  Werner Koch  <wk@g10code.com>

	* mapihelp.cpp (mapi_change_message_class): Improve detecion of
	CryptoEx messages.

2008-02-07  Werner Koch  <wk@g10code.com>

	* engine.c (engine_verify_start): Enable opaque signature for the
	assuan backend.
	* engine-assuan.c (op_assuan_verify): New arg OUTDATA.  Add
	support for opaque signatures.

	* mimeparser.c (mime_verify_opaque): New.
	* message.cpp (message_verify): Handle opaque signed S/MIME.

	* message.cpp (message_wipe_body_cruft): Delete only encrypted
	messages.

2008-02-06  Werner Koch  <wk@g10code.com>

	* mimeparser.c (mime_decrypt): New arg IS_RFC822.
	* message.cpp (message_decrypt): Add code to see whether to use
	the new arg.

2008-02-01  Werner Koch  <wk@g10code.com>

	* mimeparser.c (ciphertext_handler, ciphermessage_cb)
	(ciphermessage_t2body): New.
	(mime_decrypt): Use an rfc822 parser to pass the message to the
	engine.

	* mapihelp.cpp (mapi_get_attach_as_stream): Add arg R_ATTACH.
	(mapi_set_attach_hidden): New.

2008-01-31  Werner Koch  <wk@g10code.com>

	* message.cpp (message_verify): Check that the body attachment is
	available before shortcutting the verification.
	* user-events.cpp (OnSelectionChange): Change SMIME message
	class.
	* mapihelp.cpp (mapi_change_message_class): Add arg
	SYNC_OVERRIDE. Changed all callers to pass false.
	(mapi_test_sig_status): Take care of sent messages.
	(mapi_get_gpgol_body_attachment): Change args to allow use as
	testing fucntion too.  Adjusted caller.

2008-01-29  Werner Koch  <wk@g10code.com>

	* mimemaker.c (do_mime_sign): Set CTE for SMIME.
	(delete_all_attachments): Remove extra semicolon accidently
	inserted with revision 916.
